# ripple-ir

./: .gitignore  CRANELIFT_BACKEND.md  Cargo.toml  README.md  gumtree_reference.rs  justfile
.config/: nextest.toml
docs/: Makefile  README.md
docs/src/: main.typ  refs.bib
examples/: GCD.fir  NestedBundleModule.fir  NestedWhen.fir
scripts/: firrtl-module-splitter.py  gumtree.py  maorsgraph.py
src/: ast.rs  db.rs  firrtl.lalrpop  lexer.rs  lib.rs  main.rs
src/common/: graphviz.rs  mod.rs
src/ir/: firir.rs  flatview.rs  hierarchy.rs  mod.rs  typetree.rs  whentree.rs  whentree_impl.rs  whentree_rewrite.rs
src/ir/fir/: mod.rs
src/ir/rir/: agg.rs  mod.rs  redge.rs  rgraph.rs  rir.rs  rnode.rs
src/ir/rir/rgraph/: mod.rs  rgraph_impl.rs  (+1 more)
src/ir/typetree/: mod.rs  path.rs  subtree.rs  tedge.rs  tnode.rs  typetree.rs  typetree_graphviz.rs
src/parser/: ast.rs  lexer.rs  mod.rs  typetree.rs  whentree.rs
src/passes/: check_ast_assumption.rs  cleanup_rir.rs  flatten.rs  from_ast.rs  from_fir.rs  infer_typetree.rs  mod.rs  print.rs  remove_unnecessary_phi.rs  run_passes.rs  runner.rs  split_edges.rs
src/passes/ast/: check_ast_assumption.rs  chirrtl_print.rs  firrtl3_print.rs  firrtl3_split_exprs.rs  firrtlgraph.rs  firrtltree.rs  gumtree.rs  gumtree_graphviz.rs  infer_readwrite.rs  inline.rs  mod.rs  print.rs
src/passes/fir/: add_bidirectional_edges.rs  check_mport_assumptions.rs  check_phi_nodes.rs  common_subgraph.rs  equivalence_check.rs  equivalence_check_digitaltop.rs  export_firgraph.rs  fir_simulator.rs  from_ast.rs  hashing_function.rs  infer_typetree.rs  mod.rs  modify_names.rs  remove_unnecessary_phi.rs  sim_test.rs  to_ast.rs  to_ast_firrtl3.rs
src/passes/rir/: cleanup_rir.rs  combinational.rs  from_fir.rs  mod.rs  traverse.rs
tests/: Fir_tb.v  GCD_tb.v  export_circuit.rs  fir_sim  gcd_sim  gcd_testbench
tests/Fir.sv/: Fir.sv  filelist.f
tests/GCD.sv/: GCD.sv  filelist.f
(+13 files in other folders)
