[package]
name = "ripple-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
chirrtl-parser = { git = "ssh://git@github.com/joonho3020/chirrtl-parser.git", branch = "main"}
serde_json = "1.0.139"
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "2.0.12"
petgraph = "0.7.1"
indextree = "4.7.3"
indextree-macros = "0.1.2"
graphviz-rust = "0.9.3"
indexmap = "2.7.1"
derivative = "2.2.0"
