[package]
name = "ripple-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.139"
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "2.0.12"
petgraph = "0.7.1"
indextree = "4.7.3"
indextree-macros = "0.1.2"
graphviz-rust = "0.9.3"
indexmap = "2.7.1"
derivative = "2.2.0"
either = "1.15.0"
ptree = "0.5.2"
fixedbitset = "0.5.7"
pdfium-render = "0.8.29"
image = "0.25.5"
gif = "0.13.1"
spinoff = "0.8.0"
bimap = "0.6.3"
test-case = "3.3.1"
chirrtl-parser = "0.1.7"
